fix nil ptr bug in creating character when no description is passed
